# zephyr

./: CMakeLists.txt
boards/arm/olimex_stm32_e407/support/: openocd.cfg
samples/application_development/zenoh_app/: CMakeLists.txt  prj.conf
samples/application_development/zenoh_app/src/: main.c
samples/application_development/zenoh_app_intree/: CMakeLists.txt  sample.yaml
samples/application_development/zenoh_app_intree/src/: main.c  rand.c  strdup.c  strtof.c  strtok.c
samples/basic/blinky/src/: main.c
samples/hello_world/: CMakeLists.txt
samples/net/telnet/: prj.conf  sample.yaml
samples/net/telnet/src/: telnet.c
samples/subsys/usb/console/: prj.conf
samples/subsys/usb/console/src/: main.c
